# kaggle-playground-series

./: README.md  pyproject.toml
.github/workflows/: python-tests.yml
s5e1-sticker-sales/: README.md  config.yml  main.py
s5e1-sticker-sales/data/results/: submission.csv
s5e1-sticker-sales/src/: dataset.py  model.py
