[tool.poetry]
name = "kaggle-playground-series"
version = "0.1.0"
description = "Kaggle Playground Series (ML Practice)"
authors = ["henriupton99 <henriupton99@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.4"
torch = "^2.5.1"
lightgbm = "^4.5.0"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
